# PortFolio

./: .env.example  .gitignore  build_files.sh  db.sqlite3  pyproject.toml  requirements.txt  vercel.json
core/: views.py
core/static/css/: style.css
core/static/js/: main.js
core/templates/: index.html
portfolio_site/: settings.py  urls.py  wsgi.py
