[project]
name = "portfolio"
version = "1.0.0"
description = "Nazir Iqbal - Portfolio Website"
requires-python = ">=3.9"
dependencies = [
    "django>=4.2,<4.3",
    "whitenoise[brotli]==6.6.0",
]

[project.scripts]
app = "portfolio_site.wsgi:application"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["portfolio_site", "core"]
include = [
    "core/templates/**/*.html",
    "core/static/**/*",
]

[tool.hatch.build.targets.sdist]
include = [
    "/manage.py",
    "/portfolio_site",
    "/core",
    "/requirements.txt",
]
